--- a/src/components/MessageTypes/MessageBubbles/MessageBubble.css
+++ b/src/components/MessageTypes/MessageBubbles/MessageBubble.css
@@ -40,4 +40,27 @@
   border-bottom-left-radius: 0;
   border: 1px solid #ddd;
 }
-  
+  .message-bubble-wrapper {
+  padding: 12px 16px;
+  border-radius: 16px;
+  border: 1px solid #ddd;
+  max-width: 70%;
+  word-break: break-word;
+  font-size: 14px;
+  color: #333;
+  margin: 6px 0;
+  background: #fdfdfb;
+}
+
+.message-bubble-wrapper.user {
+  background: #5e507f;
+  color: white;
+  border-bottom-right-radius: 0;
+  align-self: flex-end;
+}
+.message-bubble-wrapper.assistant {
+  background: #fdfdfb;
+  color: #333;
+  border-bottom-left-radius: 0;
+  align-self: flex-start;
+}
